TESTS = spline.test ode.test graph.test plot2plot.test plot2hpgl.test plot2fig.test plot2ps.test tek2plot.test

EXTRA_DIST = $(TESTS) spline.xout ode.xout graph.xout plot2plot.xout plot2hpgl.xout plot2fig.xout plot2ps.xout tek2plot.xout

TESTS_ENVIRONMENT = SRCDIR=$(srcdir)

CLEANFILES = graph.out graph.dos ode.out ode.dos plot2fig.out plot2fig.dos plot2hpgl.out plot2hpgl.dos plot2plot.out plot2plot.dos plot2ps0.out plot2ps1.out plot2ps0.dos plot2ps1.dos spline.out spline.dos tek2plot.out tek2plot.dos
