TESTS = spline.test ode.test graph.test plot2plot.test plot2hpgl.test plot2pcl.test plot2fig.test plot2cgm.test plot2ps.test tek2plot.test

EXTRA_DIST = spline.test ode.test graph.test plot2plot.test plot2hpgl.test plot2pcl.test plot2fig.test plot2cgm.test plot2ps.test tek2plot.test spline.xout ode.xout graph.xout plot2plot.xout plot2hpgl.xout plot2hpgl.yout plot2pcl.xout plot2pcl.yout plot2fig.xout plot2cgm.xout plot2ps.xout tek2plot.xout
				     
TESTS_ENVIRONMENT = SRCDIR=$(srcdir) PS_FONTS_IN_PCL=$(ps_fonts_in_pcl)

CLEANFILES = graph.out ode.out ode.dos plot2fig.out plot2hpgl.out plot2cg0.out plot2cg1.out plot2plot.out plot2ps0.out plot2ps1.out spline.out spline.dos tek2plot.out
